# StarBreaker

./: .gitignore  AGENTS.md  Cargo.toml
crates/starbreaker-3d/: Cargo.toml
crates/starbreaker-3d/src/: animation.rs  api.rs  chrparams.rs  decomposed.rs  dequant.rs  lib.rs  mtl.rs  socpak.rs  types.rs  ui_pipeline.rs  validation.rs
crates/starbreaker-3d/src/animation/: bake_tests.rs  caf.rs  codec.rs  dba.rs  mannequin.rs  matching.rs  mod.rs  pose.rs  serialise.rs
crates/starbreaker-3d/src/gltf/: glb_builder.rs  mod.rs
crates/starbreaker-3d/src/ivo/: skin.rs
crates/starbreaker-3d/src/pipeline/: blend_assembly.rs  child_payload.rs  entity_export.rs  glb_assembly.rs  interiors.rs  loadout.rs  mod.rs  nmc_bridge.rs  palette.rs  textures.rs  vehicle.rs  weapon_assembly.rs
crates/starbreaker-3d/src/ui_pipeline/: style_fetcher.rs  tests.rs
crates/starbreaker-3d/tests/: check_gobo_format.rs  find_gobo.rs  gltf_test.rs  line_count_guard.rs  phase4_ui_binding_test.rs  phase_6b_integration_test.rs  phase_6d_performance_test.rs
crates/starbreaker-gfx/: Cargo.toml
crates/starbreaker-gfx/src/: error.rs  inspect.rs  lib.rs  parser.rs  raster.rs  render.rs  resolver.rs  swf_interpreter.rs  swf_render.rs  types.rs
crates/starbreaker-swf/: Cargo.toml
crates/starbreaker-swf/examples/: dump_fonts.rs  extract_ttf.rs  list_glyphs.rs  render_diff.rs  validate_ttf.rs
crates/starbreaker-swf/src/: error.rs  font_info.rs  lib.rs  shape.rs  ttf.rs
crates/starbreaker-ui/: AGENTS.md  Cargo.toml  README.md
crates/starbreaker-ui/data/: default_value_registry_v1.json  phase5_certification_set_v1.json
crates/starbreaker-ui/docs/: gold-platinum-regression-deep-dive.md  ir-freeze-schema.md  ir-style-authority-migration-plan.md  ui-matching-agent-prompt.md  ui-matching-workflow.md
crates/starbreaker-ui/examples/: as2_spike.rs  bb_dump_scene.rs  bb_layout_wireframe.rs  compare_text_heights.rs  dump_medical_ir.rs  dump_phase3_medical_traces.rs  dump_phase3_ui_target_traces.rs  dump_representative_ir.rs  dump_ui_ir_targets.rs  freeze_ui_snapshot_ir.rs  phase5_certification_dashboard.rs  query_ui_layout.rs  render_medical1_current.rs  render_phase2_comparison.rs  render_ui_targets_current.rs  swf_inventory.rs  swf_place_probe.rs  swf_text_probe.rs  trace_text_style_context.rs
crates/starbreaker-ui/src/: bb_assets.rs  bb_atlas.rs  bb_bindings.rs  bb_brand_apply.rs  bb_brand_style.rs  bb_layout.rs  bb_loc.rs  bb_loc_p4k.rs  bb_resolve.rs  bb_scene.rs  bb_state_filter.rs  bb_svg.rs  canvas.rs  compose.rs  defaults.rs  error.rs  hybrid_compose.rs  ir_compose.rs  lib.rs  pipeline.rs  postprocess.rs  style.rs  swf_assets.rs  swf_render.rs  text.rs  ui_ir.rs  ui_regression_manifest.rs  ui_snapshot.rs
crates/starbreaker-ui/src/bb_atlas/: decode.rs  mod.rs  path.rs  tests.rs
crates/starbreaker-ui/src/bb_bindings/: build.rs  eval.rs  eval_bool.rs  eval_string.rs  (+5 more)
crates/starbreaker-ui/tests/: line_count_guard.rs  manifest_live_ir_guard.rs  manifest_snapshot_regression.rs  manifest_visual_regression.rs  medical_live_ir_guard.rs  medical_snapshot_regression.rs  medical_visual_regression.rs  pipeline_ir.rs  regression_hashes.rs  source_hardcoding_guards.rs  tier1_render.rs  tier2_render.rs  ui_ir_representative.rs  visual_diff.rs
(+335 files in other folders)
