[package]
name = "starbreaker-gfx"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = "1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
rusttype = "0.9"
starbreaker-dds = { path = "../starbreaker-dds" }
swf = "0.2"
tempfile = "3"
thiserror = "2"

[lints]
workspace = true
