[package]
name = "starbreaker-ui"
edition = "2024"
version.workspace = true
description = "Static UI atom extractor and canvas composer for Star Citizen ship screens"

[dependencies]
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
log = "0.4"
sha2 = "0.10"
swf = "0.2"
thiserror = "2"

[lints]
workspace = true
