[package]
name = "starbreaker-ui"
edition = "2024"
version.workspace = true
description = "Static UI atom extractor and canvas composer for Star Citizen ship screens"

[dependencies]
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
log = "0.4"
resvg = "0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
starbreaker-dds = { path = "../starbreaker-dds" }
swf = "0.2"
thiserror = "2"
# Phase 6: vector rasterisation backend for the canvas compositor.
# tiny-skia is pre-approved; must remain unmodified (read-only dep).
tiny-skia = { version = "0.12", default-features = false, features = ["std"] }
tiny-skia-011 = { package = "tiny-skia", version = "0.11", default-features = false, features = ["std"] }
usvg = "0.42"

[lints]
workspace = true
